Overflow fixes

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,8 @@ body {
    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
       Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
    /* font-family: "Poppins", sans-serif !important; */
+   max-height: 100vh;
+   overflow: hidden;
 }
 
 a {
